Horizontal overflow fix

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -20,6 +20,9 @@ ul.d-flex {
     margin-bottom: 1rem;
 }
 
+body {
+    overflow-x: hidden;
+}
 
   @media(max-width:400px){
     #l7 {
